WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113895
Webkit exposes aria-expanded="undefined" as aria-expanded="false" (AXExpanded = NO)
https://bugs.webkit.org/show_bug.cgi?id=113895
Summary
Webkit exposes aria-expanded="undefined" as aria-expanded="false" (AXExpanded...
James Craig
Reported
2013-04-03 13:10:16 PDT
Webkit exposes aria-expanded="undefined" as aria-expanded="false" (AXExpanded = NO) It should not expose this value unless the string value matches true or false. All other values (including "undefined", "foo", etc.) should not expose the AXExpanded property at all, b/c a NO value means "expandable but not expanded" whereas an undefined value means "not expandable." Test Cases:
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-tabpanel-aria-expanded-undefined.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-timer-aria-expanded-undefined.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-toolbar-aria-expanded-undefined.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-tooltip-aria-expanded-undefined.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-tree-aria-expanded-undefined.html
https://dvcs.w3.org/hg/pfwg/raw-file/default/ARIA/1.0/tests/test-files/roles-properties-supported-inherited/roles-properties-supported-inherited-treegrid-aria-expanded-undefined.html
Attachments
patch
(5.16 KB, patch)
2013-08-21 09:42 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-04-03 13:10:55 PDT
<
rdar://problem/13569954
>
James Craig
Comment 2
2013-06-28 15:21:08 PDT
***
Bug 115148
has been marked as a duplicate of this bug. ***
chris fleizach
Comment 3
2013-08-21 09:42:18 PDT
Created
attachment 209278
[details]
patch
Darin Adler
Comment 4
2013-08-23 09:58:52 PDT
Comment on
attachment 209278
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209278&action=review
> Source/WebCore/accessibility/AccessibilityObject.cpp:1634 > + const AtomicString& expanded = getAttribute(aria_expandedAttr);
Should be fastGetAttribute.
chris fleizach
Comment 5
2013-08-23 10:00:19 PDT
Comment on
attachment 209278
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209278&action=review
>> Source/WebCore/accessibility/AccessibilityObject.cpp:1634 >> + const AtomicString& expanded = getAttribute(aria_expandedAttr); > > Should be fastGetAttribute.
this is using the AXObject's getAttr method, which looks like it does call fastGetAttribute so we should be ok. thanks
WebKit Commit Bot
Comment 6
2013-08-23 10:23:48 PDT
Comment on
attachment 209278
[details]
patch Clearing flags on attachment: 209278 Committed
r154496
: <
http://trac.webkit.org/changeset/154496
>
WebKit Commit Bot
Comment 7
2013-08-23 10:23:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug