<https://webkit.org/b/113895> Webkit exposes aria-expanded="undefined" as aria-expanded="false" (AXExpanded = NO)

Reviewed by Darin Adler.

Source/WebCore:

Don't support the ARIA expanded attribute unless the value is one of the defined ARIA values (true/false).

Test: platform/mac/accessibility/aria-expanded-not-exposed-when-undefined.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsARIAExpanded):

LayoutTests:

* platform/mac/accessibility/aria-expanded-not-exposed-when-undefined-expected.txt: Added.
* platform/mac/accessibility/aria-expanded-not-exposed-when-undefined.html: Added.


Canonical link: https://commits.webkit.org/138153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154496 268f45cc-cd09-0410-ab3c-d52691b4dbfc